# GIF-Animation

./: CMakeLists.txt  README.md  main.cpp
headers/: gif.hpp
sourse/: gif.cpp
